// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> compact 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  font-size: 1.5rem;
  line-height: 2rem;
}

.c1 {
  margin-bottom: 0px;
  font-family: Inconsolata,monospace;
  font-size: 3.75rem;
  line-height: 1;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
  font-size: 3rem;
  line-height: 1;
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  --tw-bg-opacity: 1;
  background-color: rgba(0,0,0,var(--tw-bg-opacity));
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> displays header 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
}

.c1 {
  margin-bottom: 0px;
  font-family: Inconsolata,monospace;
  font-size: 3.75rem;
  line-height: 1;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  --tw-bg-opacity: 1;
  background-color: rgba(0,0,0,var(--tw-bg-opacity));
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> lightmode 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
}

.c1 {
  margin-bottom: 0px;
  font-family: Inconsolata,monospace;
  font-size: 3.75rem;
  line-height: 1;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> lightmode and compact 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  font-size: 1.5rem;
  line-height: 2rem;
}

.c1 {
  margin-bottom: 0px;
  font-family: Inconsolata,monospace;
  font-size: 3.75rem;
  line-height: 1;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgba(255,255,255,var(--tw-text-opacity));
  font-size: 3rem;
  line-height: 1;
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  --tw-bg-opacity: 1;
  background-color: rgba(255,255,255,var(--tw-bg-opacity));
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
  <hr
    class="c3"
  />
</div>
`;

exports[`<Header /> renders OK 1`] = `
.c2 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 1.5rem;
  line-height: 2rem;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
}

.c1 {
  margin-bottom: 0px;
  font-family: Inconsolata,monospace;
  font-size: 3.75rem;
  line-height: 1;
  font-weight: 700;
  --tw-text-opacity: 1;
  color: rgba(103,73,177,var(--tw-text-opacity));
}

.c0 {
  text-align: center;
}

.c3 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  --tw-bg-opacity: 1;
  background-color: rgba(0,0,0,var(--tw-bg-opacity));
}

<div
  class="c0"
  data-testid="header"
>
  <h1
    class="c1"
    data-testid="headerTitle"
  >
    John Doe
  </h1>
  <h2
    class="c2"
    data-testid="headerSubtitle"
  >
    Programmer
  </h2>
  <hr
    class="c3"
  />
</div>
`;
